--- a/css/studentDashboard.css
+++ b/css/studentDashboard.css
@@ -26,7 +26,8 @@ body {
   width: 260px;
   background: #fff;
   padding: 0px 10px;
-  box-shadow: 0 20px 25px 5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 20px 25px 5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
 .sidebar .user-details {
@@ -66,7 +67,7 @@ body {
 }
 
 .sidebar > .nav-links > li > a {
-  transition:color 0.3s, background 0.3s;
+  transition: color 0.3s, background 0.3s;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,19 +82,19 @@ body {
   color: #ffffff;
   border-radius: 7px;
 }
-.sidebar .nav-links .active a{
+.sidebar .nav-links .active a {
   color: #fff;
 }
 .sidebar .nav-links li a:hover {
   background: #6260df81;
   border-radius: 7px;
-  transition:color 0.3s, background 0.3s;
+  transition: color 0.3s, background 0.3s;
 }
 
 .sidebar .logout {
   position: fixed;
   bottom: 6px;
-    left: 1px;
+  left: 1px;
   height: 50px;
   width: inherit;
   max-width: inherit;
@@ -103,7 +104,7 @@ body {
   justify-content: space-evenly;
   padding: 0px 10px;
 }
-.sidebar .logout div{
+.sidebar .logout div {
   width: 100%;
   font-size: 22px;
   border-top: 2px solid gray;
@@ -207,7 +208,8 @@ body {
   background: #f13854;
   color: #fff;
 }
-.Btn, .addBtn{
+.Btn,
+.addBtn {
   padding: 2px 10px;
   background: #fff;
   color: #e9972c;
@@ -216,260 +218,68 @@ body {
   font-size: 16px;
   font-weight: 550;
 }
-.Btn:hover, .addBtn:hover{
+.Btn:hover,
+.addBtn:hover {
   background: #e9972c;
   color: #fff;
 }
 
-.attendance > .data,.timetable > .takeAttendance > .data {
-  padding: 10px;
-  width: 100%;
-  height: fit-content;
-}
-
- .attendance > .data .filter {
-  width: 100%;
-  height: 50px;
-  /* background:rgba(0, 0, 0, 1); */
-}
-
-.attendance > .data #filter-value {
-  height: 100%;
-  width: 100%;
-  border-radius: 3px 3px 0px 0px;
-  border: 1px solid rgb(180, 180, 180);
-  padding: 6px;
-  font-size: 15px;
-  outline: none;
-}
-
-.attendance .data .filter #filter-value:focus {
-  border-bottom: 2px solid #006e58;
-}
-
-.attendance > .data table{
+.attendance .data table,
+.attendanceDetails table {
   width: 100%;
   height: calc(100% - 160px);
   text-align: left;
   border-collapse: collapse;
-  
-}
-.attendance .data table{
   text-align: center;
   border: 1px solid gray;
-  margin-top: 35px;
 }
 
-.attendance > .data table tr{
+.attendance > .data table tr,
+.attendanceDetails table tr {
   border: 1px solid rgb(180, 180, 180);
   border-top: none;
   height: 45px;
 }
 
 .attendance > .data table tr td,
-.attendance > .data tr th{
+.attendance > .data tr th,
+.attendanceDetails table tr td,
+.attendanceDetails table tr th {
   padding: 5px;
   height: 45px;
 }
 
-
-.select-menu {
-  /* width: fit-content; */
-  margin: 0;
-  display: inline-block;
-}
-.select-menu span{
-  margin: 0px auto;
-}
-.select-menu .select-btn {
-  position: relative;
-  display: flex;
-  height: 40px;
-  background: #fff;
-  /* padding: 6px; */
-  font-size: 15px;
-  font-weight: 200;
-  border-radius: 2px;
-  align-items: center;
-  cursor: pointer;
-  justify-content: space-between;
-  box-shadow: 0 0 5px rgb(0 0 0 / 10%);
-}
-.select-btn i {
-  font-size: 1.3em;
-  transition: 0.3s;
-  padding: 5px;
-  border-radius: 0px 2px 0px 2px;
-}
-.select-btn .sBtn-text {
-  margin: 5px;
-  /* width: 113px; */
-}
-.active2 {
-  background: none;
-}
-.select-menu.active2 .select-btn i {
-  transform: rotate(-180deg);
-}
-.select-menu .options {
-  
-  width: fit-content;
-  position: absolute;
-  padding: 10px;
-  margin-top: 6px;
-  border-radius: 2px;
-  background: #fff;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-  display: none;
-}
-.select-menu.active2 .options {
-  display: inline-block;
-}
-.options .option {
-  display: flex;
-  height: 30px;
-  cursor: pointer;
-  padding: 0 12px;
-  border-radius: 2px;
-  align-items: center;
-  background: #fff;
-}
-.options .option:hover {
-  background: #e9e9e9;
-}
-.option i {
-  font-size: 25px;
-  margin-right: 12px;
-}
-.option .option-text {
-  font-size: 15px;
-  color: #333;
-}
-.options .selected {
-  background: #e9e9e9;
-}
 .data table td:nth-child(2) {
   cursor: pointer;
 }
-.card-background, .timetable .content .card-background{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  background: #0000002f;
-  display: none;
-}
-.card-background .card , .timetable .content .card-background .card{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
-  height: 70%;
-  background: #333837;
-  border-radius: 4px;
-  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-  padding: 4px;
-  font-size: 18px;
-  padding: 5px;
-  border: 2px solid rgb(216, 216, 216);
-  color: #fff;
-  overflow: hidden;
-  overflow-y: auto;
-}
-.card-background .card .content, .timetable .content .card-background .card .content{
-  display: grid;
-  grid-template-columns: fit-content(100%) fit-content(100%) auto;
-  gap: 8px;
-  align-items: baseline;
-  grid-auto-rows: minmax(35px, 20px);
-  position: absolute;
-  top: 0;
-  font-size: 18px;
-  padding: 5px;
-  padding-top: 15px;
-  color: #fff;
-  width: 100%;
-  height: fit-content;
-}
-.card-background .card i, .timetable .content .card-background .card i {
-  position: sticky;
-  top: 0;
-  left: 100%;
-  padding: 8px;
-  font-size: 33px;
-  color: #fff;
-  z-index: 2;
-}
-.card-background .card i:hover, .timetable .content .card-background .card i:hover{
-  color:#f13854;
-}
-.card-background  .card span:nth-child(even) {
-  padding-left: 10px;
-}
- .timetable .content table .unscheduled button,
- .timetable .content .takeAttendanceBtn{
-  padding: 1px 6px;
-  background: #239dc5;
-  color: #fff;
-  border: 2px solid #239dc5;
-  border-radius: 4px;
-  font-size: 15px;
-  font-weight: 500;
-}
 
-.timetable .content table .unscheduled button:hover{
-  background: #072f3b;
-  color: #fff;
+metable {
+  overflow: auto;
 }
 .timetable{
   overflow: auto;
 }
-.timetable::-webkit-scrollbar, .timetable >.takeAttendance::-webkit-scrollbar {
+.timetable::-webkit-scrollbar,
+.timetable > .takeAttendance::-webkit-scrollbar {
   display: none;
 }
-
-/* Hide scrollbar for IE, Edge and Firefox */
-
-.timetable,.timetable .takeAttendance {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
-
-.timetable > .header, .attendance >.header{
-  width: 100%;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: rgb(226, 195, 255);;
-  padding: 20px;
-}
-
-.timetable .header > span, .attendance > .header > span{
-  font-size: 18px;
-  margin: 10px;
-}
-.timetable > .content{
+.timetable > .content {
   width: 100%;
   background: rgb(226, 195, 255);
   padding: 20px;
-
 }
-.timetable .content > table{
+.timetable .content #table-data > table {
   width: 100%;
   border-collapse: collapse;
 }
-.timetable .content > table thead{
+.timetable .content #table-data > table thead {
   height: 50px;
   background: #ffffff;
 }
-.timetable .content > table thead tr th{
+.timetable .content #table-data > table thead tr th {
   width: 14%;
 }
-.timetable > .content > table thead tr th button.selected {
+.timetable > .content #table-data > table thead tr th button.selected {
   padding: 1px 6px;
   background: #ef476f;
   color: #fff;
@@ -481,7 +291,7 @@ body {
   height: 35px;
   margin: 5px 0px;
 }
-.timetable .content > table thead tr th button {
+.timetable .content #table-data > table thead tr th button {
   padding: 1px 6px;
   border: none;
   background: #fff;
@@ -491,44 +301,65 @@ body {
   height: 35px;
   margin: 5px 0px;
 }
-.timetable .content > table thead tr th:first-child{
+.timetable .content #table-data > table thead tr th:first-child {
   background: none;
   width: 10%;
 }
-.timetable .content >  table tbody{
+.timetable .content #table-data > table tbody {
   background: #8d74eb;
 }
-.timetable .content > table tbody tr{
+.timetable .content #table-data > table tbody tr {
   height: 100px;
   /* border-bottom: 1px solid rgb(255, 255, 255); */
-  vertical-align:top;
+  vertical-align: top;
   text-align: right;
 }
-.timetable .content > table tbody tr td{
-  padding:0px 5px;
+.timetable .content #table-data > table tbody tr td {
+  padding: 0px 5px;
   height: inherit;
 }
-.timetable .content > table tbody tr td:nth-child(1){
+.timetable .content #table-data > table tbody tr td:nth-child(1) {
   border-right: 1px solid #fff;
   display: flex;
   flex-direction: column;
 }
-.timetable .content > table tbody tr td:nth-child(1) span:nth-child(1){
+.timetable
+  .content
+  #table-data
+  > table
+  tbody
+  tr
+  td:nth-child(1)
+  span:nth-child(1) {
   margin-top: 4px;
   width: 100%;
-  margin-bottom:calc((50% - (15px * 1.1)));
+  margin-bottom: calc((50% - (15px * 1.1)));
   font-size: 15px;
 }
-.timetable .content > table tbody tr td:nth-child(1) span:nth-child(2){
+.timetable
+  .content
+  #table-data
+  > table
+  tbody
+  tr
+  td:nth-child(1)
+  span:nth-child(2) {
   width: 100%;
-  margin-bottom:calc(50% - (12px * 1.1));
+  margin-bottom: calc(50% - (12px * 1.1));
   font-size: 12px;
 }
-.timetable .content > table tbody tr td:nth-child(1) span:nth-child(2){
+.timetable
+  .content
+  #table-data
+  > table
+  tbody
+  tr
+  td:nth-child(1)
+  span:nth-child(2) {
   font-size: 12px;
 }
 
-.timetable .content > table tbody tr td div{
+.timetable .content #table-data > table tbody tr td div {
   background: red;
   color: #fff;
   height: 100%;
@@ -540,57 +371,18 @@ body {
   align-items: center;
   margin: 5px 0px;
 }
-.timetable .content > table tbody tr:nth-child(1) td div{
+.timetable .content #table-data > table tbody tr:nth-child(1) td div {
   margin-top: 4px;
 }
-.timetable .content > table tbody tr td .unscheduled{
-  display: none;
-}
 
-.timetable .content .card-background{
-  position: fixed;
-  top: 0;
-  left: 0;
-  transform: translate(0, 0)
-}
-.timetable .content .card-background .card{
-  top: 50%;
-  left: 50%;
-  transform: translate(-18%, -50%);
-}
-.timetable .card-background .card .content div{
-  grid-column: 1/4;
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    row-gap: 15px;
-}
-.timetable .content .card-background .card{
-  height: fit-content;
-  padding-bottom: 20px;
-}
-.timetable .content .card-background .card .content{
-  gap: 8px;
-  position: relative;
-}
-.timetable .content .card-background .card i {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: unset;
-  padding: 8px;
-  font-size: 33px;
-  color: #fff;
-}
-.attendance .data table tbody tr td{
+.attendance .data table tbody tr td,
+.attendanceDetails table tbody tr td {
   display: table-cell;
 }
-.attendance > .data > table tbody tr td i{
+.attendance > .data > table tbody tr td i {
   font-size: 1.5rem;
 }
-.toggle-sidebar{
+.toggle-sidebar {
   font-size: 1.4rem;
   background-color: #4b49ac;
   color: #fff;
@@ -603,36 +395,190 @@ body {
   padding: 0px;
   width: calc(1.4rem - 2px);
 }
-.toggle-sidebar > i{
+.toggle-sidebar > i {
   transition: 0.3s;
   transform: rotate(-180deg);
   translate: -2px 0;
 }
 
-
-.attendance .endSection{
+.attendance .endSection {
   display: flex;
   width: 100%;
   align-items: center;
   justify-content: center;
-
 }
-.attendance .endSection #reportBtn{
+.attendance .endSection #reportBtn {
   margin: 10px 0px;
   padding: 1px 8px;
 }
-/* @media screen and (max-width:768px) {
-  .sidebar{
-    visibility: hidden ; 
-  }
-  .main{
-    width: 100% ;
-    left: 0;
-  }
-  .toggle-sidebar{
-    left: 0px;
-  }
-  .toggle-sidebar > i{
-    transform: rotate(0deg);
-  }
-} */
+.attendance .header,
+.attendanceDetails .header {
+  padding-left: 40px !important;
+}
+.attendance .header .info {
+  display: grid;
+  grid-template-columns: fit-content(100%) fit-content(100%) auto;
+  gap: 8px;
+  align-items: baseline;
+  grid-auto-rows: minmax(fit-content(100%), 20px);
+  padding: 20px;
+  font-size: 1.1rem;
+  z-index: 1;
+}
+.attendance .data {
+  padding: 10px;
+  width: 100%;
+  height: fit-content;
+}
+.attendanceDetails {
+  display: none;
+  position: absolute;
+  top: 0;
+  background: #fff;
+  height: 100%;
+  width: 100%;
+}
+.attendanceDetails #table-data {
+  padding: 10px;
+}
+
+.attendanceDetails .header .info {
+  display: grid;
+  grid-template-columns:
+    fit-content(100%) fit-content(100%) auto fit-content(100%)
+    fit-content(100%) auto;
+  gap: 8px;
+  align-items: baseline;
+  grid-auto-rows: minmax(fit-content(100%), 20px);
+}
+
+.attendanceDetails .header #close {
+  font-size: 1.8rem;
+  background: transparent;
+  position: sticky;
+  top: 0;
+  left: calc(100% - (1.8rem + 16px));
+  padding: 8px;
+  float: right;
+  z-index: 5;
+}
+.attendanceDetails .header #close:hover {
+  color: #f13854;
+}
+
+.attendanceDetails table tbody tr td .remark {
+  padding: 4px 12px;
+  width: 35px;
+  border-radius: 3px;
+  font-weight: 500;
+  color: #fff;
+  cursor: pointer;
+  user-select: none;
+}
+.attendanceDetails table tbody tr .remark[data-value="A"] {
+  background-color: #e71f4d;
+}
+.attendanceDetails table tbody tr .remark[data-value="P"] {
+  background-color: #25df6f;
+}
+.timetable .card-background {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background: #0000002f;
+  display: none;
+}
+.timetable .card-background .card {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  min-height: fit-content;
+  /* height: 70%; */
+  background: #333837;
+  border-radius: 4px;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  padding: 4px;
+  display: grid;
+  grid-template-columns: fit-content(100%) fit-content(100%) auto;
+  gap: 8px;
+  align-items: baseline;
+  grid-auto-rows: minmax(fit-content(100%), 20px);
+  font-size: 18px;
+  padding: 10px;
+  padding-top: 10px;
+  border: 2px solid rgb(216, 216, 216);
+  color: #fff;
+  overflow: hidden;
+    overflow-y: auto;
+}
+.timetable .card-background .card {
+  grid-gap: 25px !important;
+  height: fit-content !important;
+  grid-template-columns: auto auto auto !important;
+  display: grid;
+  padding-top: 25px;
+  padding-bottom: 20px;
+}
+
+.timetable .card-background .card i {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: unset;
+  padding: 8px;
+  font-size: 33px;
+  color: #fff;
+}
+.timetable .card-background .card i:hover {
+  color: #f13854;
+}
+.leaves .container{
+  display: grid;
+  grid-template-columns: fit-content(100%) fit-content(100%) auto;
+  gap: 8px;
+  align-items: baseline;
+  padding: 20px;
+  font-size: 1.1rem;
+  padding-left: 40px;
+  margin: 0 auto;
+  width: 70%;
+  justify-content: center;
+}
+.leaves .container input,.leaves .container textarea{
+  padding: 0px 5px;
+}
+.leaves .container div{
+  grid-column: span 3;
+  
+}.leaves .container div button{
+  margin: 20px;
+}
+
+#success-msg {
+  background: #def1d8;
+  color: green;
+  padding: 10px;
+  margin: 10px;
+  display: none;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  border-radius: 5px;
+}
+#error-msg {
+  background: #efdcdd;
+  color: red;
+  padding: 10px;
+  margin: 10px;
+  display: none;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  border-radius: 5px;
+}
